# simple-jpeg-decoder

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Decoder.hpp  HuffmanTree.hpp  Image.hpp  MCU.hpp  Markers.hpp  Transform.hpp  Types.hpp  Utility.hpp
src/: Decoder.cpp  HuffmanTree.cpp  Image.cpp  MCU.cpp  Transform.cpp  Utility.cpp
